--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
     <artifactId>selenium-java</artifactId>
     <version>3.141.59</version>
 </dependency>
+	 <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+       <dependency>
+           <groupId>org.testng</groupId>
+           <artifactId>testng</artifactId>
+           <version>6.8</version>
+       </dependency>
 <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
 <dependency>
     <groupId>io.github.bonigarcia</groupId>
